# explipy

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
explipy/: __init__.py  core.py  parser.py  rules.py  utils.py
tests/: test_basic.py  test_parser.py
